Code refactoring: - Made the source easier to read by adding some comments and easier to understand by renaming identifiers to be more applicable - Changed some functionality to fix a small bug where finishing level 1 jumped to level 11, and finishing level 11 jumped to level 71 - General code clean up

--- a/main-style.css
+++ b/main-style.css
@@ -1,11 +1,14 @@
 #main > table {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
   border-collapse: collapse;
   border: 2px solid black;
 }
 
 #main > table > tbody > tr > td {
-  height: 10px;
-  width: 10px;
+  height: 7px;
+  width: 7px;
   background-color: gray;
   border: 1px solid black;
   content: "&nbsp;";
@@ -15,17 +18,11 @@
 #main > table > tbody > tr > td.apple {
   background-color: red;
   border: 1px solid black;
-  content: "&curren;";
+  content: "&nbsp;";
 }
 
 
 #main > table > tbody > tr > td.worm {
-  background-color: orange;
-  border: 1px solid black;
-  content: "&nbsp;";
-}
-
-#main > table > tbody > tr > td.worm.head {
   background-color: orange;
   border: 1px solid black;
   content: "&nbsp;";
